--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,9 @@
     background-color: hotpink;
     color: #fff;
 }
+/* .search-bg{
+    background-color: rgb(206, 205, 205);
+} */
+.search-bg{
+    background-color: pink;
+}
